<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:layout_margin="16dp"
    tools:context=".UpdateProductInfo">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp"
    android:id="@+id/update_prod_linear_1"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_price"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/update_prod_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/enter_price"
        android:importantForAutofill="no"
        android:inputType="number"
         />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/update_prod_linear_2"
        android:layout_margin="8dp"
        android:layout_below="@+id/update_prod_linear_1"
        >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_stock"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            />
    <EditText
        android:id="@+id/update_prod_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/enter_stock"
        android:importantForAutofill="no"
        android:inputType="number"
        />


</LinearLayout>

    <Button
        android:id="@+id/update_prod_info_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update"
        android:layout_below="@+id/update_prod_linear_2"
         />


</RelativeLayout>