<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/show_prod_card_parent"
    android:background="@android:color/holo_blue_light"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_name"
        android:text="@string/company_name"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_category"
                android:text="@string/category"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_price"
                android:text="@string/price"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>